network-policies-demo/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-application
---
apiVersion: v1
kind: Namespace
metadata:
  name: network-policy-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: web-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: web-application
spec:
  selector:
    app: httpbin
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 90
      targetPort: 80
