network-policies-demo/network-policy-allow-other-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: web-application
spec:
  podSelector:
    matchLabels:
      app: httpbin
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access: allowed
      ports:
        - protocol: TCP
          port: 80
